[package]
name = "envoyproxy"
version = "0.1.0"
edition = "2024"
license = "ISC"
description = "Proxy that summarizes the output from Enphase Envoy"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["cargo", "derive", "env"] }
futures = "0.3.31"
promformat = { version = "0.4.1", features = ["chrono"] }
reqwest = { version = "0.12.24", features = ["json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[patch.crates-io]
promformat = { git = "https://github.com/Roguelazer/promformat", rev = "596808a024482e0227ed0293f9451120ee2b1942" }
