[package]
name = "envoyproxy"
version = "0.1.0"
edition = "2024"
license = "ISC"
description = "Proxy that summarizes the output from Enphase Envoy"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
idna_adapter = "=1.1.0"
itertools = "0.14.0"
mimalloc = "0.1.49"
promformat = { version = "0.4.1", features = ["chrono"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[patch.crates-io]
promformat = { git = "https://github.com/Roguelazer/promformat", rev = "596808a024482e0227ed0293f9451120ee2b1942" }
